# poker_backend

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  analyze_hands.py  analyze_hands_graphs.py  benchmark.py  cloudbuild.yaml  human_vs_bot_chart.py  requirements.txt
cpp/: CMakeLists.txt  README.md
cpp/src/: cards.cpp  cards.h  main.cpp  mccfr.cpp  mccfr.h  river_game.cpp  river_game.h  subgame_config.cpp  subgame_config.h  trainer.cpp  trainer.h  turn_eval.cpp  turn_eval.h  turn_game.cpp  turn_game.h  turn_trainer.cpp  turn_trainer.h  vector_eval.cpp  vector_eval.h
docs/: HU_IMPLEMENTATION_PLAN.md  IOS_INTEGRATION.md  plan.txt  protocol.md
scripts/: backfill_participant_ids.py  bot_client.py  fix_buggy_deltas.py  fix_stack_deltas.py  migrate_stack_deltas.py  seed_hu_preflop.py  verify_stack_deltas.py
src/: __init__.py
src/benchmark/: __init__.py  runner.py  stats_collector.py
src/engine/: __init__.py  adapter.py  config.py  table.py
src/insights/: __init__.py  concept_extractor.py  concept_matcher.py  concepts_grinders_manual.json  generator.py  schema.py  streaming_extractor.py  vector_store.py
src/manager/: __init__.py  commands.py  manager.py  runner.py
src/models/: __init__.py  base.py  messages.py
src/persistence/: __init__.py  firestore_client.py  hand_buffer.py  hand_logger.py  models.py
src/server/: __init__.py  app.py  auth.py  config.py  connection.py  handler.py  logging_config.py  reconnect.py  timer.py
tests/: test_engine.py  test_hand_logging.py  test_manager.py  test_server.py  test_timer.py
